--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -1510,6 +1510,7 @@
     "core.settings.privacypolicy": "Política de privacidad.",
     "core.settings.reportinbackground": "Informar de los errores automáticamente",
     "core.settings.settings": "Configuración",
+    "core.settings.showdownloadoptions": "Mostrar opciones de descarga",
     "core.settings.sites": "Sitios",
     "core.settings.spaceusage": "Espacio",
     "core.settings.synchronization": "Sincronización",
